# jack-smf-utils

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  README.md  TODO  config.h.in  configure  configure.ac
libsmf/: Makefile.in
man/: Makefile.am  Makefile.in  jack-smf-player.1  jack-smf-recorder.1
src/: Makefile.am  Makefile.in  jack-smf-player.c  jack-smf-recorder.c
